--- a/HTML-CSS/clipboard-landing-page-master/styles/global.css
+++ b/HTML-CSS/clipboard-landing-page-master/styles/global.css
@@ -2,39 +2,42 @@
     font-size: 18px;
 }
 
-body {
+@media screen and (max-width: 376px) {
+    body {
 
-    font-family: 'Bai Jamjuree', sans-serif;
+        font-family: 'Bai Jamjuree', sans-serif;
 
-    max-width: 1440px;
-    background-color: #fff;
-    text-align: center;
+        max-width: 1440px;
+        background-color: #fff;
+        text-align: center;
 
-    line-height: 1.2;
-}
+        line-height: 1.2;
+    }
 
-.container {
-    margin-bottom: 40%;
-}
+    .container {
+        margin-bottom: 40%;
+    }
 
-.section-container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
-    margin-bottom: 15%;
-}
+    .section-container {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 20px;
+        margin-bottom: 15%;
+    }
 
-.section-heading {
-    text-align: center;
-    font-size: 2rem;
-    color: hsl(210, 10%, 33%);
-    font-weight: 600;
-}
+    .section-heading {
+        text-align: center;
+        font-size: 2rem;
+        color: hsl(210, 10%, 33%);
+        font-weight: 600;
+    }
 
-.section-paragraph {
-    font-size: .9rem;
-    text-align: center;
-    line-height: 1.5;
-    color: hsl(201, 11%, 66%);
+    .section-paragraph {
+        font-size: .9rem;
+        text-align: center;
+        line-height: 1.5;
+        color: hsl(201, 11%, 66%);
+    }
+
 }
