--- a/HTML-CSS/clipboard-landing-page-master/styles/global.css
+++ b/HTML-CSS/clipboard-landing-page-master/styles/global.css
@@ -2,28 +2,71 @@
     font-size: 18px;
 }
 
+body {
+
+    font-family: 'Bai Jamjuree', sans-serif;
+
+    background-image: url("../images/bg-header-desktop.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+
+    margin: 0 auto;
+    max-width: 1440px;
+    background-color: #fff;
+    text-align: center;
+
+    line-height: 1.2;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 150px;
+}
+
+.section-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 50%;
+    gap: 20px;
+    margin-bottom: 50px;
+}
+
+.section-heading {
+    text-align: center;
+    font-size: 2.5rem;
+    color: hsl(210, 10%, 33%);
+    font-weight: 600;
+}
+
+.section-paragraph {
+    font-size: 1.1rem;
+    text-align: center;
+    line-height: 1.5;
+    color: hsl(201, 11%, 66%);
+}
+
 @media screen and (max-width: 376px) {
+
     body {
-
-        font-family: 'Bai Jamjuree', sans-serif;
-
-        max-width: 1440px;
-        background-color: #fff;
-        text-align: center;
-
-        line-height: 1.2;
+        background-image: url("../images/bg-header-mobile.png");
     }
 
     .container {
-        margin-bottom: 40%;
+        display: inline-block;
+        margin-bottom: 150px;
     }
 
     .section-container {
         display: flex;
         align-items: center;
         flex-direction: column;
+        width: 100%;
         gap: 20px;
-        margin-bottom: 15%;
+        margin-bottom: 50px;
     }
 
     .section-heading {
