--- a/HTML-CSS/todo-app-main/styles/global.css
+++ b/HTML-CSS/todo-app-main/styles/global.css
@@ -1,6 +1,114 @@
 :root {
+    --primary-color: hsl(220, 98%, 61%);
+
+    /* Dark Theme */
+    --dark-theme-color: hsl(235, 21%, 11%);
+    --list-bg-color: hsl(235, 24%, 19%);
+    --letter-color: hsl(236, 9%, 61%);
 
     font-family: 'Josefin Sans', sans-serif;
     font-size: 18px;
-    --primary-color: hsl(220, 98%, 61%);
+
 }
+
+body {
+    background-color: var(--dark-theme-color);
+    background-image: url("../images/bg-desktop-dark.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+
+    height: 980px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    margin-top: -50px;
+
+    width: 40%;
+    height: 80%;
+}
+
+.head-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 100%;
+}
+
+.switch-mode {
+    background-color: transparent;
+
+    border: none;
+
+    cursor: pointer;
+}
+
+.main-heading {
+    height: 2rem;
+
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 2.5rem;
+    font-weight: 700;
+    letter-spacing: 15px;
+}
+
+.create-container {
+    display: flex;
+
+    background-color: var(--list-bg-color);
+
+    border-radius: 5px;
+
+    height: 70px;
+    width: 100%;
+}
+
+form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 100%;
+}
+
+.create-item {
+    background-color: transparent;
+    font-family: 'Josefin Sans', sans-serif;
+
+    width: 90%;
+    height: 100%;
+
+    border: none;
+}
+
+.create-item::placeholder {
+    color: var(--letter-color);
+    font-size: 1rem;
+}
+
+.radiobox-container {
+    width: 25px;
+    height: 25px;
+
+    margin: 0 15px;
+
+    border: 1px solid var(--letter-color);
+    
+    border-radius: 50px;
+}
+
+label {
+    visibility: hidden;
+}
+
