--- a/HTML-CSS/todo-app-main/styles/reset.css
+++ b/HTML-CSS/todo-app-main/styles/reset.css
@@ -41,3 +41,14 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+button {
+	color: var(--letter-color-default);
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+	background-color: transparent;
+}
