--- a/HTML-CSS/todo-app-main/styles/global.css
+++ b/HTML-CSS/todo-app-main/styles/global.css
@@ -8,6 +8,7 @@
     --letter-color-default: hsl(236, 9%, 61%);
     --letter-color-new: hsl(233, 11%, 84%);
     --letter-color-done: hsl(234, 11%, 52%);
+    --checkbox-color: linear-gradient(45deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
 
     font-family: 'Josefin Sans', sans-serif;
     font-size: 18px;
@@ -82,7 +83,7 @@ body {
     box-shadow: 0px 11px 94px -30px rgba(0,0,0,0.75);
 }
 
-form {
+.form {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -115,6 +116,8 @@ form {
 .radiobox-container {
     width: 25px;
     height: 25px;
+
+    cursor: pointer;
 
     margin: 0 15px;
 
@@ -167,6 +170,8 @@ label {
     display: flex;
     align-items: center;
     justify-content: space-around;
+
+    margin-top: auto;
 
     height: 70px;
     width: 100%;
